--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-thisisatest
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal homepage of Thies Ketelsen">
+    <title>Thies Ketelsen</title>
+    <style type="text/css">body {font-family:sans-serif;}</style>
+</head>
+<body>
+    <h1>Thies Ketelsen</h1>
+    <img src="thies.jpeg" alt="Thies' Headshot" width="150" height="160" style="border:1px solid black">
+    
+    <p>📧 Email: <a href="mailto:hello@thiesketelsen.de">hello@thiesketelsen.de</a>  | 📞 Signal: <a href="https://signal.me/#eu/Ei20Ty00U1AMsn6+zHa3faJKiP+qvAds+2afLD8w9wkm4HkiIQJBOIb2KKp5UZQC" target="_blank">signal.me</a></p>
+
+    <h2>🌍 Hello World</h2>
+    <p>
+        Welcome to thiesketelsen.de - my personal website where you can find all the information about my professional background and experience. <br>
+        Here, you can take a closer look at my CV and credentials, as well as my detail-oriented approach, problem-solving skills, and passion for technology.
+        Additionally, I have also included a link to my PGP key and the corresponding fingerprint for secure communication.<br><br>
+        Thank you for taking the time to visit my website - I look forward to connecting with you.
+    </p>
+    <p>
+        Public Key Download: <a href="https://mail-api.proton.me/pks/lookup?op=get&amp;search=hello@thiesketelsen.de" target="_blank">pubkey.asc</a>
+        <br>
+        Unique fingerprint: <code>e59d4bedb7ff0e04c21d30d17030b7a6e5a477c9</code>
+    </p>
+
+    <h2>💼 Work Experience</h2>
+    <ul>
+        <li>
+            <p>
+                <strong>Senior Developer</strong>: September 2020 - Present<br>
+                <em>Bochum</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Senior IT-Specialist</strong>: October 2019 - August 2020<br>
+                <em>Bochum</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Java Software Tester</strong>: July 2019 - December 2019<br>
+                <em>Munich</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Junior IT-Specialist</strong>: June 2016 - September 2019<br>
+                <em>Bochum</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Webmaster</strong>: October 2015 - June 2016<br>
+                <em>Essen</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Software Tester (Student Trainee)</strong>: June 2014 - October 2015<br>
+                <em>Erkrath</em>
+            </p>
+        </li>
+    </ul>
+
+    <h2>🎓 Education</h2>
+    <ul>
+        <li>
+            <p>
+                <strong>TU Dortmund</strong> (2015 - 2016)<br>
+                Applied Computer Science<br>
+                <em>Dortmund</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>University of Duisburg-Essen</strong> - Bachelor of Science (2011-2015)<br>
+                Applied Computer Science<br>
+                <em>Duisburg</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Berufliches Gymnasium Niebüll</strong> - Abitur (2009-2011)<br>
+                Technical specialisation (emphasis on data processing technology)<br>
+                <em>Niebüll</em>
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Ingraham High School</strong> - Junior Year (2007-2008)<br>
+                <em>Seattle</em>
+            </p>
+        </li>
+    </ul>
+
+    <h2>👨‍💻 Skills & Tools</h2>
+    <ul>
+        <li>Kotlin & Java ☕</li>
+        <li>Jenkins 🤵</li>
+        <li>GitHub Actions ⚙️</li>
+        <li>Redhat Openshift</li>
+        <li>AWS CDK</li>
+        <li>Docker 🐋</li>
+        <li>git 🔃</li>
+        <li>GitHub, Bitbucket</li>
+        <li>Jira, Confluence</li>
+        <li>Linux 🐧</li>
+        <li>🏐</li>
+    </ul>
+
+    <small>© 2025 thiesketelsen.de</small>
+</body>
+</html>
