--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <li>🏐</li>
     </ul>
 
+    <small><a href="https://thiesketelsen.de/">Mirror</a></small>	
     <small>© 2025 thiesketelsen.de</small>
 </body>
 </html>
